--- a/templates/canvas/confirm_delete_course.html
+++ b/templates/canvas/confirm_delete_course.html
@@ -13,34 +13,44 @@
             <div class="card-header bg-danger text-white">
                 <h4 class="card-title mb-0"><i class="fa fa-trash me-2"></i>Delete Canvas Course</h4>
             </div>
-            <div class="card-body">
-                <div class="alert alert-secondary mb-4 p-4" role="alert">
-                    <h4 class="alert-heading">You are about to delete the following course:</h4>
-                    <p class="mb-3 fs-5"><strong>{{ course.course_code }}:</strong> {{ course.name }}</p>
-                    
-                    <h5 class="mt-4">This will delete:</h5>
-                    <ul class="mb-3">
-                        <li>All assignments in this course</li>
-                        <li>All student enrollments in this course</li>
-                        <li>All submissions in this course</li>
-                        <li>All connections to this course</li>
-                    </ul>
-                    
-                    <p class="mb-0"><strong>Important:</strong> This action only removes the course from GradeBench. It will <em>not</em> affect the original course on Canvas.</p>
+            <div class="card-body p-4">
+                <!-- Use the alert component for warning message -->
+                <div class="alert alert-warning mb-4">
+                    <div class="d-flex">
+                        <div class="flex-shrink-0">
+                            <i class="fa fa-exclamation-triangle fa-2x text-warning me-3"></i>
+                        </div>
+                        <div>
+                            <h5 class="alert-heading">You are about to delete the following course:</h5>
+                            <p class="mb-0 fs-5"><strong>{{ course.course_code }}:</strong> {{ course.name }}</p>
+                        </div>
+                    </div>
                 </div>
-                
-                <div class="row mt-4 justify-content-center">
-                    <div class="col-md-5 mb-3 mb-md-0">
-                        <a href="{% url 'canvas_course_detail' course_id=course.canvas_id %}" class="btn btn-secondary btn-round btn-lg w-100">
-                            <i class="fa fa-arrow-left me-1"></i> Cancel
-                        </a>
+
+                <div class="card bg-light mb-4">
+                    <div class="card-body">
+                        <h5 class="mb-3"><i class="fa fa-info-circle me-2"></i>This will delete:</h5>
+                        <ul class="mb-3 ps-4">
+                            <li class="mb-2">All assignments in this course</li>
+                            <li class="mb-2">All student enrollments in this course</li>
+                            <li class="mb-2">All submissions in this course</li>
+                            <li class="mb-2">All connections to this course</li>
+                        </ul>
+
+                        <div class="alert alert-info mb-0">
+                            <p class="mb-0"><i class="fa fa-info-circle me-1"></i> <strong>Note:</strong> This action only removes the course from GradeBench. It will <em>not</em> affect the original course on Canvas.</p>
+                        </div>
                     </div>
-                    <div class="col-md-5">
-                        <form method="post">
-                            {% csrf_token %}
-                            {% bootstrap_button button_type="submit" content='<i class="fa fa-trash me-1"></i> Delete Course' button_class="btn-danger btn-round btn-lg w-100" %}
-                        </form>
-                    </div>
+                </div>
+
+                <div class="d-flex gap-3 justify-content-center mt-4">
+                    <a href="{% url 'canvas_course_detail' course_id=course.canvas_id %}" class="btn btn-secondary btn-round btn-lg">
+                        <i class="fa fa-arrow-left me-1"></i> Cancel
+                    </a>
+                    <form method="post">
+                        {% csrf_token %}
+                        {% bootstrap_button button_type="submit" content='<i class="fa fa-trash me-1"></i> Delete Course' button_class="btn-danger btn-round btn-lg" %}
+                    </form>
                 </div>
             </div>
         </div>
