--- a/staticfiles/css/variables.css
+++ b/staticfiles/css/variables.css
@@ -15,8 +15,8 @@
 
 :root {
   /* Brand Colors */
-  --gb-primary: #007bff;
-  --gb-primary-dark: #0056b3;
+  --gb-primary: #66615b;
+  --gb-primary-dark: #52cbce;
   --gb-primary-light: #cce5ff;
   --gb-primary-rgb: 0, 123, 255;
   
