--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -15,7 +15,7 @@
 
 :root {
   /* Brand Colors */
-  --gb-primary: #007bff;
+  --gb-primary: #66615b;
   --gb-primary-dark: #0056b3;
   --gb-primary-light: #cce5ff;
   --gb-primary-rgb: 0, 123, 255;
