--- a/templates/processes/team_wizard.html
+++ b/templates/processes/team_wizard.html
@@ -113,18 +113,21 @@
                                         {% for option in wizard.form.group_categories.field.queryset %}
                                             <div class="col-md-4 mb-3">
                                                 <div class="card group-set-card h-100">
-                                                    <div class="card-header">
-                                                        <div class="form-check">
-                                                            <input type="checkbox"
-                                                                   name="{{ wizard.form.group_categories.name }}"
-                                                                   value="{{ option.id }}"
-                                                                   id="id_{{ wizard.form.group_categories.name }}_{{ forloop.counter }}"
-                                                                   class="form-check-input"
-                                                                   {% if option.id|stringformat:"i" in wizard.form.group_categories.value|default:"" %}checked{% endif %}>
-                                                            <label class="form-check-label fw-bold" for="id_{{ wizard.form.group_categories.name }}_{{ forloop.counter }}">
-                                                                {{ option.name }}
-                                                            </label>
-                                                        </div>
+                                                    <div class="card-header d-flex justify-content-between align-items-center">
+                                                        <h6 class="mb-0 ms-2">{{ option.name }}</h6>
+                                                        <button type="button"
+                                                                class="btn btn-sm btn-outline-primary btn-round group-select-btn me-2"
+                                                                data-value="{{ option.id }}"
+                                                                data-name="{{ wizard.form.group_categories.name }}"
+                                                                data-selected="{% if option.id|stringformat:"i" in wizard.form.group_categories.value|default:"" %}true{% else %}false{% endif %}">
+                                                            <i class="fa {% if option.id|stringformat:"i" in wizard.form.group_categories.value|default:"" %}fa-check{% else %}fa-plus{% endif %}"></i>
+                                                        </button>
+                                                        <input type="checkbox"
+                                                               name="{{ wizard.form.group_categories.name }}"
+                                                               value="{{ option.id }}"
+                                                               id="id_{{ wizard.form.group_categories.name }}_{{ forloop.counter }}"
+                                                               class="d-none form-check-input"
+                                                               {% if option.id|stringformat:"i" in wizard.form.group_categories.value|default:"" %}checked{% endif %}>
                                                     </div>
                                                     <div class="card-body">
                                                         <p class="text-muted mb-0">
@@ -253,24 +256,39 @@
                 dropdownParent: $('.card-body')
             });
 
-            // Group set selection card click handler
-            $('.group-set-card').on('click', function(e) {
-                if (!$(e.target).is('input[type="checkbox"]')) {
-                    const checkbox = $(this).find('input[type="checkbox"]');
-                    checkbox.prop('checked', !checkbox.prop('checked'));
-                }
+            // Plus button click handler
+            $('.group-select-btn').on('click', function(e) {
+                e.preventDefault();
+                const checkbox = $(this).siblings('input[type="checkbox"]');
+                const isSelected = $(this).attr('data-selected') === 'true';
+
+                // Toggle checkbox state
+                checkbox.prop('checked', !isSelected);
+
+                // Update button appearance
+                $(this).attr('data-selected', isSelected ? 'false' : 'true');
+                $(this).find('i').toggleClass('fa-plus fa-check');
+
+                // Update button style
+                $(this).toggleClass('btn-outline-primary btn-primary');
             });
 
             // Select all group categories
             $('#select-all-groups').on('click', function(e) {
                 e.preventDefault();
                 $('.group-set-card input[type="checkbox"]').prop('checked', true);
+                $('.group-select-btn').attr('data-selected', 'true');
+                $('.group-select-btn').removeClass('btn-outline-primary').addClass('btn-primary');
+                $('.group-select-btn i').removeClass('fa-plus').addClass('fa-check');
             });
 
             // Deselect all group categories
             $('#deselect-all-groups').on('click', function(e) {
                 e.preventDefault();
                 $('.group-set-card input[type="checkbox"]').prop('checked', false);
+                $('.group-select-btn').attr('data-selected', 'false');
+                $('.group-select-btn').removeClass('btn-primary').addClass('btn-outline-primary');
+                $('.group-select-btn i').removeClass('fa-check').addClass('fa-plus');
             });
         });
     </script>
